--- a/src/main/resources/com/fitness/fragment/employment/employment.fxml
+++ b/src/main/resources/com/fitness/fragment/employment/employment.fxml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<?import java.net.URL?>
-<fx:root alignment="CENTER" type="javafx.scene.layout.GridPane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
+
+<fx:root alignment="CENTER" hgap="5.0" stylesheets="@../../style/bootstrap3.css" type="javafx.scene.layout.GridPane" vgap="5.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <rowConstraints>
       <RowConstraints valignment="BOTTOM" />
-      <RowConstraints maxHeight="300.0" minHeight="300.0" prefHeight="300.0" valignment="BOTTOM" />
+      <RowConstraints maxHeight="1000.0" minHeight="300.0" prefHeight="300.0" valignment="CENTER" />
+      <RowConstraints fillHeight="false" valignment="BOTTOM" />
+      <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
+      <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
       <RowConstraints valignment="TOP" vgrow="ALWAYS" />
-      <RowConstraints valignment="BOTTOM" vgrow="ALWAYS" />
-      <RowConstraints valignment="TOP" />
-      <RowConstraints valignment="TOP" />
    </rowConstraints>
    <columnConstraints>
       <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" />
@@ -21,7 +27,7 @@
    </columnConstraints>
    <children>
       <Label styleClass="header1" stylesheets="@../../style/labels.css" text="Ծառայություններ" GridPane.columnSpan="2147483647" GridPane.halignment="LEFT" GridPane.valignment="BOTTOM" />
-      <ScrollPane fx:id="employmentsScrollPane" hbarPolicy="NEVER" maxHeight="300.0" maxWidth="800.0" minHeight="300.0" minViewportHeight="100.0" minWidth="800.0" prefHeight="300.0" prefViewportHeight="200.0" prefWidth="800.0" style="-fx-background-color: transparent;" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" GridPane.vgrow="ALWAYS">
+      <ScrollPane fx:id="employmentsScrollPane" hbarPolicy="NEVER" maxHeight="300.0" maxWidth="800.0" minHeight="300.0" minViewportHeight="100.0" minWidth="800.0" prefHeight="300.0" prefViewportHeight="200.0" prefWidth="800.0" style="-fx-background-color: transparent;" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
          <content>
             <GridPane alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="800.0" minWidth="800.0" prefWidth="800.0" style="-fx-vgap: 20px;">
                <rowConstraints>
@@ -29,11 +35,37 @@
                </rowConstraints></GridPane>
          </content>
       </ScrollPane>
-      <Separator prefWidth="200.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
+      <Separator prefWidth="200.0" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
          <GridPane.margin>
-            <Insets top="10.0" />
+            <Insets />
          </GridPane.margin>
       </Separator>
+      <Label styleClass="paragraph" text="Ծառայություն" GridPane.halignment="LEFT" GridPane.rowIndex="3" GridPane.valignment="BOTTOM">
+         <GridPane.margin>
+            <Insets bottom="5.0" />
+         </GridPane.margin>
+      </Label>
+      <TextField fx:id="employmentNameTextField" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="3" GridPane.valignment="BOTTOM">
+         <GridPane.margin>
+            <Insets bottom="5.0" />
+         </GridPane.margin>
+         <font>
+            <Font size="17.0" />
+         </font>
+      </TextField>
+      <Label styleClass="paragraph" text="Մեկ ծառայության գին (դրամ)" GridPane.halignment="LEFT" GridPane.rowIndex="4" GridPane.valignment="TOP">
+         <GridPane.margin>
+            <Insets top="5.0" />
+         </GridPane.margin>
+      </Label>
+      <TextField fx:id="priceTextField" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="4" GridPane.valignment="TOP">
+         <GridPane.margin>
+            <Insets bottom="5.0" top="5.0" />
+         </GridPane.margin>
+         <font>
+            <Font size="17.0" />
+         </font>
+      </TextField>
       <GridPane GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" />
@@ -49,49 +81,17 @@
                   <Font size="22.0" />
                </font>
             </Button>
-            <Button fx:id="deleteButton" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" styleClass="secondary" text="Ջնջել" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
+            <Button fx:id="addButton" contentDisplay="CENTER" mnemonicParsing="false" styleClass="primary" text="Ավելացնել" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <font>
                   <Font size="22.0" />
                </font>
             </Button>
-            <Button fx:id="addButton" contentDisplay="CENTER" mnemonicParsing="false" styleClass="primary" text="Ավելացնել" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+            <Button fx:id="deleteButton" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" styleClass="secondary" text="Ջնջել" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
                <font>
                   <Font size="22.0" />
                </font>
             </Button>
          </children>
       </GridPane>
-      <Label styleClass="paragraph" text="Ծառայություն" GridPane.halignment="LEFT" GridPane.rowIndex="3">
-         <GridPane.margin>
-            <Insets bottom="5.0" />
-         </GridPane.margin>
-      </Label>
-      <Label styleClass="paragraph" text="Մեկ ծառայության գին (դրամ)" GridPane.halignment="LEFT" GridPane.rowIndex="4">
-         <GridPane.margin>
-            <Insets top="5.0" />
-         </GridPane.margin>
-      </Label>
-      <TextField fx:id="employmentNameTextField" alignment="CENTER_RIGHT" styleClass="textField" GridPane.columnIndex="2" GridPane.rowIndex="3">
-         <GridPane.margin>
-            <Insets bottom="5.0" />
-         </GridPane.margin>
-         <font>
-            <Font size="17.0" />
-         </font>
-      </TextField>
-      <TextField fx:id="priceTextField" alignment="CENTER_RIGHT" styleClass="textField" GridPane.columnIndex="2" GridPane.rowIndex="4">
-         <GridPane.margin>
-            <Insets bottom="5.0" top="5.0" />
-         </GridPane.margin>
-         <font>
-            <Font size="17.0" />
-         </font>
-      </TextField>
    </children>
-   <stylesheets>
-      <URL value="@../../style/button.css" />
-      <URL value="@../../style/labels.css" />
-      <URL value="@../../style/text_field.css" />
-      <URL value="@../../style/combo_box.css" />
-   </stylesheets>
 </fx:root>
