--- a/src/main/resources/com/fitness/fragment/position/position.fxml
+++ b/src/main/resources/com/fitness/fragment/position/position.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -15,17 +14,17 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<fx:root alignment="CENTER" type="javafx.scene.layout.GridPane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root alignment="CENTER" hgap="5.0" stylesheets="@../../style/bootstrap3.css" type="javafx.scene.layout.GridPane" vgap="5.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <rowConstraints>
       <RowConstraints valignment="BOTTOM" />
       <RowConstraints maxHeight="300.0" minHeight="300.0" prefHeight="300.0" valignment="BOTTOM" />
       <RowConstraints valignment="TOP" vgrow="ALWAYS" />
       <RowConstraints valignment="BOTTOM" vgrow="ALWAYS" />
       <RowConstraints valignment="BOTTOM" vgrow="ALWAYS" />
+      <RowConstraints valignment="BOTTOM" vgrow="ALWAYS" />
       <RowConstraints valignment="TOP" />
    </rowConstraints>
    <columnConstraints>
-      <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" />
       <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" />
       <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" />
    </columnConstraints>
@@ -39,12 +38,63 @@
                </rowConstraints></GridPane>
          </content>
       </ScrollPane>
-      <Separator prefWidth="200.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
+      <Separator GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
          <GridPane.margin>
-            <Insets top="10.0" />
+            <Insets />
          </GridPane.margin>
       </Separator>
-      <GridPane GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER">
+      <Label text="Հաստիք" GridPane.halignment="LEFT" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+         <GridPane.margin>
+            <Insets bottom="5.0" />
+         </GridPane.margin>
+      </Label>
+      <TextField fx:id="positionNameTextField" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin>
+         <font>
+            <Font size="17.0" />
+         </font>
+      </TextField>
+      <GridPane hgap="5.0" vgap="5.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="4">
+         <columnConstraints>
+            <ColumnConstraints maxWidth="1.7976931348623157E308" minWidth="-Infinity" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" />
+            <ColumnConstraints />
+            <ColumnConstraints />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints />
+            <RowConstraints vgrow="SOMETIMES" />
+            <RowConstraints vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <Button fx:id="deletePositionButton" mnemonicParsing="false" text="Ջնջել" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+            <TableView fx:id="positionEmploymentTable" maxHeight="300.0" minHeight="100.0" prefHeight="100.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="1">
+               <columns>
+                  <TableColumn fx:id="employmentColumn" prefWidth="524.0" text="Ծառայություններ *" />
+               </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+               <GridPane.margin>
+                  <Insets bottom="5.0" top="5.0" />
+               </GridPane.margin>
+            </TableView>
+            <Button fx:id="addPositionButton" mnemonicParsing="false" text="Ավելացնել" wrapText="true" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+            <Label text="Ծառայություն" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets left="5.0" />
+               </GridPane.margin>
+            </Label>
+            <ComboBox fx:id="employmentComboBox" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin></ComboBox>
+         </children>
+      </GridPane>
+      <Separator GridPane.columnSpan="2147483647" GridPane.rowIndex="5" />
+      <GridPane GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" />
             <ColumnConstraints hgrow="SOMETIMES" />
@@ -59,70 +109,26 @@
                   <Font size="22.0" />
                </font>
             </Button>
-            <Button fx:id="deleteButton" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" styleClass="secondary" text="Ջնջել" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
-               <font>
-                  <Font size="22.0" />
-               </font>
-            </Button>
             <Button fx:id="addButton" contentDisplay="CENTER" mnemonicParsing="false" styleClass="primary" text="Ավելացնել" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <font>
                   <Font size="22.0" />
                </font>
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+            </Button>
+            <Button fx:id="deleteButton" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" styleClass="secondary" text="Ջնջել" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
+               <font>
+                  <Font size="22.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
             </Button>
          </children>
-      </GridPane>
-      <Label styleClass="paragraph" text="Հաստիք" GridPane.halignment="LEFT" GridPane.rowIndex="3" GridPane.valignment="CENTER">
          <GridPane.margin>
-            <Insets bottom="5.0" />
+            <Insets top="20.0" />
          </GridPane.margin>
-      </Label>
-      <TextField fx:id="positionNameTextField" alignment="CENTER_RIGHT" styleClass="textField" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
-         <GridPane.margin>
-            <Insets left="5.0" right="5.0" />
-         </GridPane.margin>
-         <font>
-            <Font size="17.0" />
-         </font>
-      </TextField>
-      <GridPane GridPane.columnSpan="2147483647" GridPane.rowIndex="4">
-         <columnConstraints>
-            <ColumnConstraints maxWidth="1.7976931348623157E308" minWidth="-Infinity" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" />
-            <ColumnConstraints />
-            <ColumnConstraints />
-         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints />
-            <RowConstraints vgrow="SOMETIMES" />
-            <RowConstraints vgrow="SOMETIMES" />
-         </rowConstraints>
-         <children>
-            <TableView fx:id="positionEmploymentTable" maxHeight="300.0" minHeight="100.0" prefHeight="100.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="1">
-               <columns>
-                  <TableColumn fx:id="employmentColumn" prefWidth="524.0" text="Ծառայություններ *" />
-               </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-               <GridPane.margin>
-                  <Insets left="5.0" right="5.0" top="5.0" />
-               </GridPane.margin>
-            </TableView>
-            <ComboBox fx:id="employmentComboBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-            <Button fx:id="addPositionButton" mnemonicParsing="false" styleClass="secondary" text="Ավելացնել" wrapText="true" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-            <Button fx:id="deletePositionButton" mnemonicParsing="false" styleClass="secondary" text="Ջնջել" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-            <Label styleClass="paragraph" text="Ծառայություն" GridPane.columnIndex="1" GridPane.rowIndex="2">
-               <GridPane.margin>
-                  <Insets left="5.0" />
-               </GridPane.margin>
-            </Label>
-         </children>
       </GridPane>
    </children>
-   <stylesheets>
-      <URL value="@../../style/button.css" />
-      <URL value="@../../style/labels.css" />
-      <URL value="@../../style/text_field.css" />
-      <URL value="@../../style/combo_box.css" />
-   </stylesheets>
 </fx:root>
