--- a/src/main/resources/com/fitness/fragment/subscription/edit_subscription.fxml
+++ b/src/main/resources/com/fitness/fragment/subscription/edit_subscription.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<fx:root type="javafx.scene.layout.GridPane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root hgap="5.0" stylesheets="@../../style/bootstrap3.css" type="javafx.scene.layout.GridPane" vgap="5.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <columnConstraints>
       <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" />
       <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" />
@@ -23,70 +23,80 @@
       <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
       <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
       <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
+      <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
       <RowConstraints maxHeight="1.7976931348623157E308" valignment="CENTER" vgrow="ALWAYS" />
    </rowConstraints>
    <children>
-      <Label styleClass="header1" text="Փոփոխել աբոնեմենտը" GridPane.columnSpan="2147483647" />
+      <Label styleClass="header1" text="Փոփոխել աբոնեմենտ" GridPane.columnSpan="2147483647" />
       <Label styleClass="paragraph" text="Անուն" GridPane.rowIndex="1" />
       <TextField fx:id="nameTextField" styleClass="textField" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
       <Label styleClass="paragraph" text="Ընդհանուր արժեք" GridPane.rowIndex="2" />
-      <Button fx:id="previousButton" mnemonicParsing="false" styleClass="secondary" text="Հետ" GridPane.rowIndex="5" />
-      <Button fx:id="editSubscriptionButton" mnemonicParsing="false" styleClass="primary" text="Փոփոխել" wrapText="true" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="5" GridPane.valignment="CENTER" />
       <Label fx:id="totalPriceLabel" styleClass="paragraph" text="0 դրամ" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
-      <GridPane GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
+      <GridPane hgap="5.0" vgap="5.0" GridPane.columnSpan="2147483647" GridPane.halignment="RIGHT" GridPane.rowIndex="4" GridPane.valignment="CENTER">
          <columnConstraints>
-            <ColumnConstraints maxWidth="1.7976931348623157E308" minWidth="-Infinity" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="538.0" minWidth="377.0" prefWidth="529.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="324.0" minWidth="163.0" prefWidth="246.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.0" minWidth="236.0" prefWidth="253.0" />
+            <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="-Infinity" />
+            <ColumnConstraints hgrow="ALWAYS" maxWidth="800.0" minWidth="400.0" prefWidth="500.0" />
+            <ColumnConstraints hgrow="ALWAYS" maxWidth="350.0" minWidth="150.0" prefWidth="250.0" />
+            <ColumnConstraints hgrow="ALWAYS" maxWidth="500.0" minWidth="150.0" prefWidth="250.0" />
          </columnConstraints>
          <rowConstraints>
             <RowConstraints />
             <RowConstraints vgrow="SOMETIMES" />
             <RowConstraints vgrow="SOMETIMES" />
+            <RowConstraints vgrow="SOMETIMES" />
+            <RowConstraints vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <TableView fx:id="subscriptionEmploymentTable" maxHeight="300.0" minHeight="100.0" prefHeight="100.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="1">
+            <Button fx:id="deleteEmploymentButton" mnemonicParsing="false" styleClass="secondary" text="Ջնջել" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+            <TableView fx:id="subscriptionEmploymentTable" maxHeight="300.0" minHeight="100.0" prefHeight="100.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <columns>
-                  <TableColumn fx:id="employmentColumn" prefWidth="524.0" text="Ծառայություն" />
-                  <TableColumn fx:id="quantityColumn" maxWidth="382.0" minWidth="100.0" prefWidth="247.0" text="Քանակ" />
-                  <TableColumn fx:id="priceColumn" prefWidth="245.0" text="Գին" />
+                  <TableColumn fx:id="employmentColumn" maxWidth="800.0" minWidth="400.0" prefWidth="500.0" text="Ծառայություն" />
+                  <TableColumn fx:id="quantityColumn" maxWidth="350.0" minWidth="150.0" prefWidth="250.0" text="Քանակ" />
+                  <TableColumn fx:id="priceColumn" maxWidth="500.0" minWidth="150.0" prefWidth="250.0" text="Գին" />
                </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
                <GridPane.margin>
-                  <Insets left="5.0" right="5.0" top="5.0" />
+                  <Insets />
                </GridPane.margin>
             </TableView>
-            <ComboBox fx:id="employmentComboBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+            <Button fx:id="addEmploymentButton" mnemonicParsing="false" styleClass="secondary" text="Ավելացնել" wrapText="true" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+            <Label text="Ծառայություն" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets left="5.0" />
                </GridPane.margin>
+            </Label>
+            <ComboBox fx:id="employmentComboBox" maxWidth="800.0" minWidth="400.0" prefWidth="500.0" GridPane.columnIndex="2" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+               <GridPane.margin>
+                  <Insets top="5.0" />
+               </GridPane.margin>
             </ComboBox>
-            <TextField fx:id="quantityTextField" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" styleClass="textField" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+            <Label text="Քանակ" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <GridPane.margin>
-                  <Insets />
+                  <Insets left="5.0" />
+               </GridPane.margin>
+            </Label>
+            <TextField fx:id="quantityTextField" maxWidth="350.0" minWidth="150.0" prefWidth="250.0" styleClass="textField" GridPane.columnIndex="2" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+               <GridPane.margin>
+                  <Insets top="5.0" />
                </GridPane.margin>
             </TextField>
-            <Button fx:id="addEmploymentButton" mnemonicParsing="false" styleClass="secondary" text="Ավելացնել" wrapText="true" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-            <TextField fx:id="priceTextField" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" styleClass="textField" GridPane.columnIndex="3" GridPane.rowIndex="2">
+            <Label text="Գին" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <GridPane.margin>
-                  <Insets right="5.0" />
+                  <Insets left="5.0" />
+               </GridPane.margin>
+            </Label>
+            <TextField fx:id="priceTextField" maxWidth="500.0" minWidth="150.0" prefWidth="250.0" styleClass="textField" GridPane.columnIndex="2" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+               <GridPane.margin>
+                  <Insets bottom="5.0" top="5.0" />
                </GridPane.margin>
             </TextField>
-            <Button fx:id="deleteEmploymentButton" mnemonicParsing="false" styleClass="secondary" text="Ջնջել" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
-               <GridPane.margin>
-                  <Insets top="10.0" />
-               </GridPane.margin>
-            </Button>
          </children>
       </GridPane>
+      <Button fx:id="previousButton" mnemonicParsing="false" styleClass="secondary" text="Հետ" GridPane.rowIndex="6" />
+      <Button fx:id="editSubscriptionButton" mnemonicParsing="false" styleClass="primary" text="Փոփոխել" wrapText="true" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="6" GridPane.valignment="CENTER" />
+      <Separator prefWidth="200.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="3" />
+      <Separator prefWidth="200.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="5" />
    </children>
-   <stylesheets>
-      <URL value="@../../style/button.css" />
-      <URL value="@../../style/labels.css" />
-      <URL value="@../../style/combo_box.css" />
-      <URL value="@../../style/text_field.css" />
-   </stylesheets>
 </fx:root>
